Closed Bug 474740 Opened 17 years ago Closed 17 years ago

SVG SMIL: dur="media" is incorrectly reported as a parsing error

Categories

(Core :: SVG, defect)

defect
Not set
normal

Tracking

()

RESOLVED FIXED

People

(Reporter: birtles, Assigned: birtles)

References

()

Details

Attachments

(1 file)

SVG 1.1, 19.2.6 says that "media" is an allowed value for the dur attribute. However, currently SMIL reports this as an error in the javascript console. It shouldn't.
Attached patch patch v1aSplinter Review
Proposed patch.
Attachment #358126 - Flags: superreview?(roc)
Attachment #358126 - Flags: review?(roc)
Attachment #358126 - Flags: superreview?(roc)
Attachment #358126 - Flags: superreview+
Attachment #358126 - Flags: review?(roc)
Attachment #358126 - Flags: review+
Status: ASSIGNED → RESOLVED
Closed: 17 years ago
Resolution: --- → FIXED
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: