Bug 474740, SVG SMIL: dur="media" is incorrectly reported as a parsing error

--HG--
extra : rebase_source : 98c0109978ad9fed21351cad36932a2d7f6bed52